# jsonapi-rust

./: .clog.toml  .codecov.yml  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
data/: author_tolkien.json  collection.json  errors.json  jsonapi_info_001.json  links_001.json  links_002.json  resource_001.json  resource_002.json  resource_003.json  resource_004.json  resource_all_attributes.json  resource_post_001.json  resource_post_002.json  results.json
src/: api.rs  array.rs  errors.rs  lib.rs  model.rs  query.rs  serde_types.in.rs
tests/: api_test.rs  helper.rs  model_test.rs  query_test.rs
